<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Graph</class>
 <widget class="QWidget" name="Graph">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>562</width>
    <height>430</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-color: #202020;</string>
  </property>
  <widget class="QCustomPlot" name="widget" native="true">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>541</width>
     <height>341</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QCustomPlot {background-color: #ffffff;
border-radius: 5%;
margin: 2;
}</string>
   </property>
  </widget>
  <widget class="QDoubleSpinBox" name="xMin">
   <property name="geometry">
    <rect>
     <x>90</x>
     <y>390</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QDoubleSpinBox {
background-color: #323232;
color: #ffffff;
font: 14pt &quot;Sans Serif Collection&quot;;
border-radius: 5%;
margin: 2;
}

QDoubleSpinBox:hover {
background-color: #3B3B3B;
}

QDoubleSpinBox::up-button { width: 20px;
border:0;
}

QDoubleSpinBox::down-button { width: 20px;
border: 0;
}</string>
   </property>
  </widget>
  <widget class="QDoubleSpinBox" name="yMin">
   <property name="geometry">
    <rect>
     <x>260</x>
     <y>390</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QDoubleSpinBox {
background-color: #323232;
color: #ffffff;
font: 14pt &quot;Sans Serif Collection&quot;;
border-radius: 5%;
margin: 2;
}

QDoubleSpinBox:hover {
background-color: #3B3B3B;
}

QDoubleSpinBox::up-button { width: 20px;
border:0;
}

QDoubleSpinBox::down-button { width: 20px;
border: 0;
}</string>
   </property>
  </widget>
  <widget class="QLabel" name="xMinLabel">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>390</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel {
color: white;
padding-left: 2;
font: 14pt &quot;Sans Serif Collection&quot;;
}</string>
   </property>
   <property name="text">
    <string>X Min</string>
   </property>
  </widget>
  <widget class="QLabel" name="yMinLabel">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>390</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel {
color: white;
padding-left: 2;
font: 14pt &quot;Sans Serif Collection&quot;;
}</string>
   </property>
   <property name="text">
    <string>Y Min</string>
   </property>
  </widget>
  <widget class="QPushButton" name="buttonGraph">
   <property name="geometry">
    <rect>
     <x>350</x>
     <y>390</y>
     <width>201</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QPushButton {
background-color: #b5adeb;
color: #2e2c3c;
font: 14pt &quot;Sans Serif Collection&quot;;
border-radius: 5%;
margin: 2;
}

QPushButton:hover {
background-color: #9690c2;
}

QPushButton:pressed {
background-color: #9690c2;
color: #605c7c;
}</string>
   </property>
   <property name="text">
    <string>graph</string>
   </property>
  </widget>
  <widget class="QLabel" name="result">
   <property name="geometry">
    <rect>
     <x>350</x>
     <y>355</y>
     <width>201</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: #ffffff;
color: black;
font: 14pt &quot;Sans Serif Collection&quot;;
border-radius: 5%;
margin: 2;</string>
   </property>
   <property name="text">
    <string>0</string>
   </property>
  </widget>
  <widget class="QDoubleSpinBox" name="xMax">
   <property name="geometry">
    <rect>
     <x>90</x>
     <y>355</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QDoubleSpinBox {
background-color: #323232;
color: #ffffff;
font: 14pt &quot;Sans Serif Collection&quot;;
border-radius: 5%;
margin: 2;
}

QDoubleSpinBox:hover {
background-color: #3B3B3B;
}

QDoubleSpinBox::up-button { width: 20px;
border:0;
}

QDoubleSpinBox::down-button { width: 20px;
border: 0;
}</string>
   </property>
  </widget>
  <widget class="QLabel" name="yMaxLabel">
   <property name="geometry">
    <rect>
     <x>180</x>
     <y>355</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel {
color: white;
padding-left: 2;
font: 14pt &quot;Sans Serif Collection&quot;;
}</string>
   </property>
   <property name="text">
    <string>Y Max</string>
   </property>
  </widget>
  <widget class="QDoubleSpinBox" name="yMax">
   <property name="geometry">
    <rect>
     <x>259</x>
     <y>355</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QDoubleSpinBox {
background-color: #323232;
color: #ffffff;
font: 14pt &quot;Sans Serif Collection&quot;;
border-radius: 5%;
margin: 2;
}

QDoubleSpinBox:hover {
background-color: #3B3B3B;
}

QDoubleSpinBox::up-button { width: 20px;
border:0;
}

QDoubleSpinBox::down-button { width: 20px;
border: 0;
}</string>
   </property>
  </widget>
  <widget class="QLabel" name="xMaxLabel">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>355</y>
     <width>81</width>
     <height>31</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QLabel {
color: white;
padding-left: 2;
font: 14pt &quot;Sans Serif Collection&quot;;
}</string>
   </property>
   <property name="text">
    <string>X Max</string>
   </property>
  </widget>
  <zorder>result</zorder>
  <zorder>widget</zorder>
  <zorder>xMin</zorder>
  <zorder>xMinLabel</zorder>
  <zorder>yMinLabel</zorder>
  <zorder>buttonGraph</zorder>
  <zorder>yMin</zorder>
  <zorder>xMax</zorder>
  <zorder>yMaxLabel</zorder>
  <zorder>yMax</zorder>
  <zorder>xMaxLabel</zorder>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QCustomPlot</class>
   <extends>QWidget</extends>
   <header>qcustomplot.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
